Clean up unnecessary files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 fresh-mymiconseil/
 mymiconseil/
 mymiconseil_backup/
-
-fresh-mymiconseil/
-mymiconseil/
-mymiconseil_backup/
-fresh-mymiconseil/
-mymiconseil/
-mymiconseil_backup/
+.DS_Store
